Thunderbird css: headers line spacing fix

--- a/NsCDE/share/config_templates/integration/thunderbird/nscdeChrome.css
+++ b/NsCDE/share/config_templates/integration/thunderbird/nscdeChrome.css
@@ -904,6 +904,7 @@ treechildren::-moz-tree-image(flaggedCol, flagged) {
   color: WindowText !important;
   background-color: Window !important;
   margin-top: 3px !important;
+  line-height: 1em !important;
 }
 
 .headerValue {
@@ -914,20 +915,18 @@ treechildren::-moz-tree-image(flaggedCol, flagged) {
   background-color: Window !important;
   margin-top: 2px !important;
   padding-left: 8px !important;
+  line-height: 1em !important;
 }
 
-.headerValueUrl {
+.headerValueUrl,
+.headerValueUrl:hover {
   cursor: pointer !important;
   color: -moz-nativehyperlinktext !important;
   line-height: 0.4em !important;
   text-decoration: underline !important;
   margin-top: 2px !important;
   padding-left: 8px !important;
-}
-
-.headerValueUrl:hover {
-  color: -moz-nativehyperlinktext !important;
-  line-height: 0.4em !important;
+  line-height: 1em !important;
 }
 
 /* Addressbook */
